--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -18,7 +18,9 @@ serialize_json = ["serde_json", "serde"]
 serialize_nanoserde_json = ["nanoserde"]
 
 [dependencies]
-wasmer = "1"
+anyhow = "1"
+wasmtime = "0.28.0"
+once_cell = "1"
 getrandom = { version = "0.2", optional = true }
 serde = { version = "1", optional = true }
 bincode = { version = "1", optional = true }
