--- a/example/example_host/Cargo.toml
+++ b/example/example_host/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 publish = false
 
 [dependencies]
-wasm_plugin_host = { path = "../../host" }
+wasmtime_plugin_host = { path = "../../host" }
