--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "wasm_plugin_host"
+name = "wasmtime_plugin_host"
 version = "0.1.7"
-authors = ["Alec Deason <wasm_plugin@tinycountry.com>"]
 edition = "2018"
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/alec-deason/wasm_plugin/tree/main/host"
+repository = "https://github.com/wezm/wasmtime-plugin/tree/main/host"
 description = "A low-ish level tool for easily hosting WASM based plugins"
-keywords = ["WASM", "plugin"]
-categories = ["game-development", "wasm"]
+keywords = ["wasm", "plugin"]
+categories = ["wasm"]
 
 [features]
 default = ["serialize_bincode"]
